@@ -1,3 +1,8 @@
+Fri Dec 07 14:48:01 2001  George Lebl <jirka@5z.com>
+
+	* xstuff.[ch], basep-widget.c, foobar-widget.c: add an extra type
+	  for autohide panels so that windowmanagers can behave more nicely.
+
 2001-12-07  Alexander Larsson  <alla@lysator.liu.se>
 
 	* launcher.c (launcher_file_name):
